# src/subjects/subjects.controller.ts
@@ -10,7 +10,7 @@ import {
 import { SubjectsService } from './subjects.service';
 import { CreateSubjectDto } from './dto/create-subject.dto';
 import { UpdateSubjectDto } from './dto/update-subject.dto';
-import { ApiOkResponse, ApiOperation, ApiTags } from '@nestjs/swagger';
+import { ApiCreatedResponse, ApiOperation, ApiTags } from '@nestjs/swagger';
 
 @ApiTags('Subjects')
 @Controller('subjects')
@@ -18,14 +18,14 @@ export class SubjectsController {
   constructor(private readonly subjectsService: SubjectsService) {}
 
   @Post()
-  // @ApiOperation({
-  //   summary: 'Create a new subject',
-  //   description: 'Create a new subject',
-  // })
-  // @ApiOkResponse({
-  //   description: 'The record has been successfully created.',
-  //   type: CreateSubjectDto,
-  // })
+  @ApiOperation({
+    summary: 'Create a new subject',
+    description: 'Create a new subject',
+  })
+  @ApiCreatedResponse({
+    description: 'Retorna dados da anuidade alterada.',
+    type: CreateSubjectDto,
+  })
   create(@Body() createSubjectDto: CreateSubjectDto) {
     return this.subjectsService.create(createSubjectDto);
   }
